--- a/service1/Dockerfile
+++ b/service1/Dockerfile
@@ -3,5 +3,5 @@ ENV APP_NAME item
 COPY ./target/${APP_NAME}.jar  /app/${APP_NAME}.jar	
 WORKDIR /app	
 CMD java -jar ${APP_NAME}.jar	
-#CMD ["java", "-jar", "item-0.0.1-SNAPSHOT.jar"]
+#CMD ["java", "-jar", "service1-0.0.1-SNAPSHOT.jar"]
 EXPOSE 8080
