--- a/service1/Dockerfile
+++ b/service1/Dockerfile
@@ -1,5 +1,5 @@
 FROM  openjdk:17-jdk-alpine
-ENV APP_NAME item	
+ENV APP_NAME service1	
 COPY ./target/${APP_NAME}.jar  /app/${APP_NAME}.jar	
 WORKDIR /app	
 CMD java -jar ${APP_NAME}.jar	
